chore(kdl-server): restore values

--- a/charts/kdl-server/crds/user-tools-operator-crd.yaml
+++ b/charts/kdl-server/crds/user-tools-operator-crd.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   group: kdl.konstellation.io
   names:
-    kind: KDLUserTools
-    listKind: KDLUserToolsList
+    kind: UserTools
+    listKind: UserToolsList
     plural: usertools
     singular: usertool
   scope: Namespaced
@@ -17,7 +17,7 @@ spec:
     schema:
       openAPIV3Schema:
         type: object
-        description: KDLUserTools is the Schema for the KDLUserTools API
+        description: UserTools is the Schema for the usertools API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -954,12 +954,30 @@ spec:
               serviceAccountName:
                 description: serviceAccount name to attach generated roles
                 type: string
+              giteaOauth2Setup:
+                type: object
+                properties:
+                  image:
+                    type: object
+                    properties:
+                      repository:
+                        description: image repository
+                        type: string
+                      tag:
+                        description: image tag
+                        type: string
+                      pullPolicy:
+                        description: image pull policy
+                        type: string
+                  giteaAdminSecret:
+                    description: the secret containing gitea admin user and password
+                    type: string
+                  giteaOauth2Configmap:
+                    description: the configmap containing the oauth2 config
+                    type: string
               vscode:
                 type: object
                 properties:
-                  enabled:
-                    type: boolean
-                    description: enable or disable vscode
                   image:
                     type: object
                     properties:
