fix: incorrect values.yaml

--- a/charts/kdl-server/templates/server/configmap-project-operator.yaml
+++ b/charts/kdl-server/templates/server/configmap-project-operator.yaml
@@ -8,5 +8,5 @@ metadata:
   labels:
     {{- include "kdl-server.kdlServerLabels" . | nindent 4 }}
 data:
-  template: >
+  template: |
     {{- .Values.projectOperator.templateCustomResource | nindent 4 }}
