--- a/charts/kdl-server/templates/server/deployment.yaml
+++ b/charts/kdl-server/templates/server/deployment.yaml
@@ -166,6 +166,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            # This variable uses on KDL API to load configMap
+            # to operators: <release-name>-server-project-template
             - name: RELEASE_NAME
               valueFrom:
                 fieldRef:
