--- a/charts/kdl-server/Chart.yaml
+++ b/charts/kdl-server/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 type: application
 name: kdl-server
 description: A Helm chart to deploy KDL server
-version: 6.1.0
+version: 6.2.0-rc.1
 appVersion: 1.39.0
 sources:
   - https://github.com/konstellation-io/kdl-server
