--- a/charts/kdl-server/templates/server/secret-old.yaml
+++ b/charts/kdl-server/templates/server/secret-old.yaml
@@ -1,5 +1,3 @@
-{{- include "validate.server_environment" . }}
-
 # TODO: only use to keep backward with user-tools
 # will be remove and adapt UserTools
 apiVersion: v1
@@ -12,4 +10,4 @@ type: Opaque
 data:
   MINIO_ACCESS_KEY: {{ .Values.minio.rootUser | b64enc }}
   MINIO_SECRET_KEY: {{ .Values.minio.rootPassword | b64enc }}
-  MINIO_ENDPOINT: "{{ .Values.env.MINIO_ENDPOINT | printf "%s:9000" | b64enc }}"
+  MINIO_ENDPOINT: {{ printf "%s:%s" (default "minio" .Values.env.MINIO_ENDPOINT) (default "9000" .Values.env.MINIO_PORT) | b64enc }}
