--- a/charts/kdl-server/templates/project-operator/clusterrole-metrics.yaml
+++ b/charts/kdl-server/templates/project-operator/clusterrole-metrics.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.projectOperator.enabled }}
+{{- if .Values.projectOperator.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
