--- a/charts/kdl-server/templates/project-operator/servicemonitor.yaml
+++ b/charts/kdl-server/templates/project-operator/servicemonitor.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.projectOperator.serviceMonitor.enabled }}
+{{ if and .Values.projectOperator.enabled .Values.projectOperator.serviceMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
