--- a/charts/kdl-server/templates/user-tools-operator/clusterrolebinding-metrics-auth.yaml
+++ b/charts/kdl-server/templates/user-tools-operator/clusterrolebinding-metrics-auth.yaml
@@ -1,15 +1,16 @@
 {{ if .Values.userToolsOperator.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
-  name: {{ include "kdl-server.user-tools-operator.name" . }}
+  name: {{ include "kdl-server.user-tools-operator.name" . }}-metrics-auth
   labels:
     {{- include "kdl-server.userToolsOperatorLabels" . | nindent 4 }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: {{ include "kdl-server.user-tools-operator.name" . }}-metrics-auth
 subjects:
 - kind: ServiceAccount
   name: {{ include "kdl-server.userToolsOperatorServiceAccountName" . }}
-roleRef:
-  kind: Role
-  name: {{ include "kdl-server.user-tools-operator.name" . }}
-  apiGroup: rbac.authorization.k8s.io
+  namespace: {{ .Release.Namespace }}
 {{- end }}
