--- a/charts/kdl-server/templates/user-tools-operator/deployment.yaml
+++ b/charts/kdl-server/templates/user-tools-operator/deployment.yaml
@@ -57,21 +57,31 @@ spec:
           {{- with .Values.userToolsOperator.args }}
           args: {{- toYaml . | nindent 12 }}
           {{- end }}
-          lifecycle:
-            {{- with .Values.userToolsOperator.lifecycle }}
-            {{- toYaml . | nindent 12 }}
+          ports:
+            - name: http
+              containerPort: {{ .Values.userToolsOperator.service.targetPort | default .Values.userToolsOperator.service.port }}
+              protocol: TCP
+            {{- range $port := .Values.userToolsOperator.service.extraPorts }}
+            - name: {{ $port.name }}
+              containerPort: {{ $port.targetPort }}
+              protocol: TCP
             {{- end }}
-          env:
-            - name: WATCH_NAMESPACE
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.namespace
-            - name: POD_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
-            - name: OPERATOR_NAME
-              value: "user-tools-operator"
+          {{- with .Values.userToolsOperator.lifecycle }}
+          lifecycle:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: {{ .Values.userToolsOperator.service.targetPort | default .Values.userToolsOperator.service.port }}
+            initialDelaySeconds: 15
+            periodSeconds: 20
+          readinessProbe:
+            httpGet:
+              path: /readyz
+              port: {{ .Values.userToolsOperator.service.targetPort | default .Values.userToolsOperator.service.port }}
+            initialDelaySeconds: 5
+            periodSeconds: 10
           resources:
             {{- toYaml .Values.knowledgeGalaxy.resources | nindent 12 }}
       terminationGracePeriodSeconds: {{ .Values.userToolsOperator.terminationGracePeriodSeconds }}
