--- a/charts/kdl-server/templates/user-tools-operator/role-leader-election.yaml
+++ b/charts/kdl-server/templates/user-tools-operator/role-leader-election.yaml
@@ -1,10 +1,10 @@
-{{- if .Values.projectOperator.enabled }}
+{{- if .Values.userToolsOperator.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ include "kdl-server.project-operator.name" . }}-leader-election
+  name: {{ include "kdl-server.user-tools-operator.name" . }}-leader-election
   labels:
-    {{- include "kdl-server.projectOperatorLabels" . | nindent 4 }}
+    {{- include "kdl-server.userToolsOperatorLabels" . | nindent 4 }}
 rules:
 - apiGroups:
   - ""
