--- a/charts/kdl-server/templates/project-operator/deployment.yaml
+++ b/charts/kdl-server/templates/project-operator/deployment.yaml
@@ -6,7 +6,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "kdl-server.fullname" . }}-project-operator
+  name: {{ include "kdl-server.project-operator.name" . }}
   labels:
     {{- include "kdl-server.projectOperatorLabels" . | nindent 4 }}
 spec:
@@ -57,6 +57,15 @@ spec:
           {{- with .Values.projectOperator.args }}
           args: {{- toYaml . | nindent 12 }}
           {{- end }}
+          ports:
+            - name: http
+              containerPort: {{ .Values.projectOperator.service.targetPort | default .Values.projectOperator.service.port }}
+              protocol: TCP
+            {{- range $port := .Values.projectOperator.service.extraPorts }}
+            - name: {{ $port.name }}
+              containerPort: {{ $port.targetPort }}
+              protocol: TCP
+            {{- end }}
           lifecycle:
             {{- with .Values.projectOperator.lifecycle }}
             {{- toYaml . | nindent 12 }}
